--- a/frontend/src/app/components/students-list/students-list.component.html
+++ b/frontend/src/app/components/students-list/students-list.component.html
@@ -1,129 +1,113 @@
 <div class="app-container">
-    <mat-toolbar>
-      <!-- Your existing toolbar content -->
-      <span>
-        <mat-toolbar-row class="d-flex">
-          <!-- Logo -->
-          <div class="logo">
-            <img src="assets/images/logo-header.png" alt="Logo" />
-          </div>
-          <div class="row">
-            <ul class="icon-navbar">
-              <li>
-                <button mat-button [matMenuTriggerFor]="menu">
-                  <div class="notif">
-                    <mat-icon>notifications_active</mat-icon>
+  <mat-toolbar>
+    <!-- Your existing toolbar content -->
+    <span>
+      <mat-toolbar-row class="d-flex">
+        <!-- Logo -->
+        <div class="logo">
+          <img src="assets/images/logo-header.png" alt="Logo" />
+        </div>
+        <div class="row">
+          <ul class="icon-navbar">
+            <li>
+              <button mat-button [matMenuTriggerFor]="menu">
+                <div class="notif">
+                  <mat-icon>notifications_active</mat-icon>
+                </div>
+              </button>
+              <mat-menu #menu="matMenu">
+                <!--listes des notifications-->
+                <mat-list>
+                  <mat-list-item>vous avez une notification</mat-list-item>
+                </mat-list>
+              </mat-menu>
+            </li>
+            <mat-divider [vertical]="true"></mat-divider>
+            <li>
+              <button mat-button [matMenuTriggerFor]="menu1">
+                <div class="profile_details">
+                  <mat-icon>perm_identity</mat-icon>
+                  <div class="class_type">
+                    <span>nom d'utilisateur</span>
                   </div>
+                </div>
+              </button>
+              <mat-menu #menu1="matMenu" class="btn-account">
+                <button mat-menu-item>
+                  <a mat-list-item routerLinkActive="list-item-active" routerLink="/profil">
+                    <mat-icon>edit</mat-icon>Modifier mon profil
+                  </a>
                 </button>
-                <mat-menu #menu="matMenu">
-                  <!--listes des notifications-->
-                  <mat-list>
-                    <mat-list-item>vous avez une notification</mat-list-item>
-                  </mat-list>
-                </mat-menu>
-              </li>
-              <mat-divider [vertical]="true"></mat-divider>
-              <li>
-                <button mat-button [matMenuTriggerFor]="menu1">
-                  <div class="profile_details">
-                    <mat-icon>perm_identity</mat-icon>
-                    <div class="class_type">
-                      <span>nom d'utilisateur</span>
-                    </div>
-                  </div>
+                <button mat-menu-item>
+                  <mat-icon>exit_to_app</mat-icon>
+                  Déconnexion
                 </button>
-                <mat-menu #menu1="matMenu" class="btn-account">
-                  <button mat-menu-item>
-                    <a mat-list-item routerLinkActive="list-item-active" routerLink="/profil">
-                      <mat-icon>edit</mat-icon>Modifier mon profil
-                    </a>
-                  </button>
-                  <button mat-menu-item>
-                    <mat-icon>exit_to_app</mat-icon>
-                    Déconnexion
-                  </button>
-                </mat-menu>
-              </li>
-            </ul>
-          </div>
-        </mat-toolbar-row>
-      </span>
-    </mat-toolbar>
-  
-    <div class="content-container">
-      <mat-sidenav-container class="example-container">
-        <!-- Sidebar -->
-        <mat-sidenav mode="side" opened>
-            <mat-nav-list class="list">
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/acceuil">
-                  <mat-icon>home</mat-icon>Acceuil
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/gest">
-                  <mat-icon>grid_on</mat-icon>Liste des etudiants
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard">
-                  <mat-icon>pie_chart</mat-icon>Absence
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/intervention">
-                  <mat-icon>trending_up</mat-icon>Intervention
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/histo">
-                  <mat-icon>history</mat-icon>Historique
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/archive">
-                  <mat-icon>inbox</mat-icon>Archive
-                </a>
-                <a mat-list-item routerLinkActive="list-item-active" routerLink="/propos">
-                  <mat-icon>supervised_user_circle</mat-icon>à propos de nous
-                </a>
-            </mat-nav-list>
-        </mat-sidenav>
-  
-        <!-- Main content -->
-        <mat-sidenav-content>
-            <mat-card>
-                <mat-card-content>
-                    <div class="title">Mes absences</div>
-                    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+              </mat-menu>
+            </li>
+          </ul>
+        </div>
+      </mat-toolbar-row>
+    </span>
+  </mat-toolbar>
 
-                        <!--- Note that these columns can be defined in any order.
-                              The actual rendered columns are set as a property on the row definition" -->
-                      
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                          <th mat-header-cell *matHeaderCellDef> No. </th>
-                          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-                        </ng-container>
-                      
-                        <!-- class Column -->
-                        <ng-container matColumnDef="class">
-                          <th mat-header-cell *matHeaderCellDef> Nom </th>
-                          <td mat-cell *matCellDef="let element"> {{element.Nom}} </td>
-                        </ng-container>
-                      
-                        <!-- Prenom Column -->
-                        <ng-container matColumnDef="Prenom">
-                          <th mat-header-cell *matHeaderCellDef> Prenom </th>
-                          <td mat-cell *matCellDef="let element"> {{element.Prenom}} </td>
-                        </ng-container>
-                      
-                        <!-- absence Column -->
-                        <ng-container matColumnDef="absence">
-                          <th mat-header-cell *matHeaderCellDef> absence </th>
-                          <td mat-cell *matCellDef="let element"> <mat-slide-toggle>Slide me!</mat-slide-toggle>
-                          </td>
-                        </ng-container>
-                      
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                      </table>
-                      
-                      
-                </mat-card-content>
-              </mat-card>
+  <div class="content-container">
+    <mat-sidenav-container class="example-container">
+      <!-- Sidebar -->
+      <mat-sidenav mode="side" opened>
+        <mat-nav-list class="list">
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/acceuil">
+            <mat-icon>home</mat-icon>Acceuil
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/studentList">
+            <mat-icon>account_circle</mat-icon>Liste des etudiants
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard">
+            <mat-icon>pie_chart</mat-icon>Absence
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/moy">
+            <mat-icon>calculate</mat-icon>Moyenne
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/success">
+            <mat-icon>trending_up</mat-icon>Taux de réussite
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/archive">
+            <mat-icon>grid_on</mat-icon>Emploi du temps
+          </a>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/propos">
+            <mat-icon>supervised_user_circle</mat-icon>à propos de nous
+          </a>
+        </mat-nav-list>
+      </mat-sidenav>
+
+      <!-- Main content -->
+      <mat-sidenav-content>
+        <mat-card>
+          <mat-card-content>
+            <div class="title">Liste des etudiants</div> 
+              <table>
+                <thead>
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Toggle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let row of student">
+                    <td>{{ row.firstName }}</td>
+                    <td>{{ row.lastName }}</td>
+                    <td>
+                      <mat-slide-toggle></mat-slide-toggle>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
               
-        </mat-sidenav-content>
-      </mat-sidenav-container>
-    </div>
+
+          </mat-card-content>
+        </mat-card>
+
+      </mat-sidenav-content>
+    </mat-sidenav-container>
   </div>
-  
+</div>
