--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@ mat-icon {
     margin-left: 7px;
   }
   mat-toolbar {
-    background-color: #a6cef1;
+    background-color: #acc8e0;
     width: 100%;
 
   }
@@ -35,12 +35,12 @@ mat-icon {
   .profile_details mat-icon {
     font-size: 35px;
     margin-right: 15px;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   .notif mat-icon {
     font-size: 25px;
-    color: white;
+    color: rgb(0, 0, 0);
     margin-top: 11px;
   }
   
@@ -75,4 +75,10 @@ mat-icon {
     flex: 1;
     overflow: auto;
   }
- 
+ .title{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size:x-large;
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 3%;
+ }
