--- a/frontend/src/app/components/moy/moy.component.html
+++ b/frontend/src/app/components/moy/moy.component.html
@@ -83,40 +83,28 @@
       <mat-sidenav-content>
         <mat-card>
           <mat-card-content>
-            <div class="title">Mes absences</div>
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-              <!--- Note that these columns can be defined in any order.
-                              The actual rendered columns are set as a property on the row definition" -->
-
-              <!-- id Column -->
-              <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-              </ng-container>
-
-              <!-- class Column -->
-              <ng-container matColumnDef="class">
-                <th mat-header-cell *matHeaderCellDef> class </th>
-                <td mat-cell *matCellDef="let element"> {{element.class}} </td>
-              </ng-container>
-
-              <!-- Date Column -->
-              <ng-container matColumnDef="Date">
-                <th mat-header-cell *matHeaderCellDef> Date </th>
-                <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
-              </ng-container>
-
-              <!-- Time Column -->
-              <ng-container matColumnDef="Time">
-                <th mat-header-cell *matHeaderCellDef> Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.Time}} </td>
-              </ng-container>
-
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-
+            <div class="title">les moyennes</div> 
+              <table>
+                <thead>
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Moyenne</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let row of student">
+                    <td>{{ row.firstName }}</td>
+                    <td>{{ row.lastName }}</td>
+                    <td>
+                      <mat-form-field class="example-full-width">
+                        <input matInput type="email" placeholder="moyenne">
+                      </mat-form-field>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              
 
           </mat-card-content>
         </mat-card>
